--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,5 @@
-# Gradle build directories and caches
-.gradle/
-build/
-gradle-app.out
+# Ignore Gradle project-specific cache directory
+.gradle
 
-# Include Gradle wrapper jar (if you want it version-controlled)
-!gradle/wrapper/gradle-wrapper.jar
-
-# VSCode settings (optional: remove if you want to share workspace settings)
-.vscode/
-
-# C++ compiled files and binaries
-*.o
-*.obj
-*.so
-*.a
-*.dylib
-*.exe
-*.out
-
-# CMake artifacts (if using CMake in the future)
-CMakeFiles/
-CMakeCache.txt
-
-# OS-specific files
-.DS_Store
-Thumbs.db
-
-# Log files
-*.log
+# Ignore Gradle build output directory
+build
