--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,9 @@
 [versions]
 guava = "33.3.1-jre"
 junit = "4.13.2"
+testfx = "4.0.17"
 
 [libraries]
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit = { module = "junit:junit", version.ref = "junit" }
+testfx = { group = "org.testfx", name = "testfx-junit", version.ref = "testfx" }
